Add recipe and picture linked to it
There was no recipe before

--- a/recipes/protein_crepe.html
+++ b/recipes/protein_crepe.html
@@ -1,1 +1,30 @@
 <h1>Protein Crepe</h1>
+
+<img src="crepe1.png" alt="An image of a crepe">
+<h2>Description</h2>
+    <p>Welcome to the recipe for my famous protein crepe</p>
+    <p>The fastest way to muscle, while keeping our tastebuds alive</p>
+    
+<h3>Ingredients</h3>
+    <ul>
+        <li>2 eggs</li>
+        <li>1 swiss yogurt</li>
+        <li>50g of flour</li>    
+        <li>1 scoop of protein whey (~35g)</li>    
+        <li>20ml of milk</li>
+        <li><h4>Optionnal</h4>
+    <ul>
+        <li>5g of cinamon</li>
+        <li>10g of sugar</li>
+        <li>15g of chocolate chips</li>
+        <li>15g of syrup</li>
+    </ul></li>
+    </ul>
+<h3>Steps</h3>
+    <ol>
+        <li>Whisk the two eggs with the swiss yogurt</li>
+        <li>Add the flour</li>
+        <li>Keep mixing and then add the protein whey</li>
+        <li>Add the milk</li>
+        <li>Cook in a pan until the texture change</li>
+    </ol>
